# autoreason-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.sh  callgrind_analysis.txt  profile.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
include/autoreason/: prover.h
src/: prover.cpp
tests/: prover_benchmark.cpp  prover_test.cpp
